--- a/src/components/mangas/Item.module.css
+++ b/src/components/mangas/Item.module.css
@@ -1,5 +1,4 @@
 .item{
-  margin: 1rem 10px;
   justify-content: center;
   position: relative;
   list-style: none;
@@ -43,7 +42,6 @@
 }
 
 .actions {
-  padding: 1.5rem;
   text-align: center;
   
   
