--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -16,5 +16,6 @@
   .card {
     display: block;
     justify-content: center;
+    padding: 0;
   }
 }
